# NervOs

./: .gitignore  Cargo.toml  README.md  reference.txt  run.sh  setup.sh  x86_64-gehri.json
.cargo/: config.toml
src/: interrupts.rs  keyboard.rs  main.rs  vga.rs
src/arch/x86_64/: boot.asm
