[package]
name = "gehri-os"
version = "0.1.0"
edition = "2021"
authors = ["Jatha"]

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
x86_64 = "0.14"
spin = "0.9"
uart_16550 = "0.2"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
pic8259 = "0.10"
pc-keyboard = "0.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort" 